syntax = "proto3";
package ostracon.privval;

import "tendermint/privval/types.proto";

option go_package = "github.com/Finschia/ostracon/proto/ostracon/privval";

// VRFProofRequest is a PrivValidatorSocket message containing a message to generate proof.
message VRFProofRequest {
  bytes message = 1;
}

// VRFProofResponse is a PrivValidatorSocket message containing a Proof.
message VRFProofResponse {
  bytes                                proof = 1;
  tendermint.privval.RemoteSignerError error = 2;
}

message Message {
  oneof sum {
    tendermint.privval.PubKeyRequest          pub_key_request          = 1;
    tendermint.privval.PubKeyResponse         pub_key_response         = 2;
    tendermint.privval.SignVoteRequest        sign_vote_request        = 3;
    tendermint.privval.SignedVoteResponse     signed_vote_response     = 4;
    tendermint.privval.SignProposalRequest    sign_proposal_request    = 5;
    tendermint.privval.SignedProposalResponse signed_proposal_response = 6;
    tendermint.privval.PingRequest            ping_request             = 7;
    tendermint.privval.PingResponse           ping_response            = 8;
    VRFProofRequest                           vrf_proof_request        = 1000;
    VRFProofResponse                          vrf_proof_response       = 1001;
  }
}
